bundle/manifests/image-based-install-webhook_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ibi-webhook-serving-certs
  creationTimestamp: null
  name: image-based-install-webhook
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: image-based-install-operator
status:
  loadBalancer: {}
