bundle/manifests/image-based-install-operator_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: image-based-install-operator
  name: image-based-install-operator
spec:
  egress:
  - ports:
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
  - ports:
    - port: 6443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
    - ipBlock:
        cidr: ::/0
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
    - ipBlock:
        cidr: ::/0
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
    ports:
    - port: 8080
      protocol: TCP
  - ports:
    - port: 9443
      protocol: TCP
  - ports:
    - port: 8000
      protocol: TCP
  podSelector:
    matchLabels:
      app: image-based-install-operator
  policyTypes:
  - Ingress
  - Egress
